center plans on mobile; fix navigation on medium screen

--- a/src/app/core/components/navigation/navigation.component.scss
+++ b/src/app/core/components/navigation/navigation.component.scss
@@ -15,7 +15,7 @@
   background-color: $white;
   border-top: 1px solid $grey;
 }
-@media screen and (min-width: $max-width + 1) {
+@media screen and (min-width: $max-width + 197) {
   .mst-navigation {
     width: 7rem;
     left: calc(50% - 284px - 9rem);
