--- a/src/app/plans/plans/plans.component.scss
+++ b/src/app/plans/plans/plans.component.scss
@@ -1,5 +1,20 @@
+@import '../../static/variables';
+
+.mst-plans {
+  padding: 2.5rem 0;  
+}
 .mst-plans-link {
   display: block;
-  padding-bottom: 2rem;
   text-decoration: none;
+  padding-bottom: 2rem;
+}
+
+@media screen and (max-width: $max-width) {
+  .mst-plans {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+    padding: 0;
+  }
 }
